c8-ingress-headlamp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: c8-labs-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - dashboard-c8-labs.makelabs.in
      secretName: dashboard-makelabs-in-tls

  rules:
    - host: dashboard-c8-labs.makelabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-headlamp
                port:
                  number: 80
